--- a/.github/workflows/baiduspeed.yml
+++ b/.github/workflows/baiduspeed.yml
@@ -2,7 +2,7 @@ name: 百度极速版
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/30 * * * *'
+     - cron: '*/30 1-22 * * *'
   watch:
     types: started
 jobs:
