--- a/.github/workflows/baiduspeed.yml
+++ b/.github/workflows/baiduspeed.yml
@@ -2,7 +2,7 @@ name: 百度极速版
 on:
   workflow_dispatch:
   schedule:
-     - cron: '1 1-22/2 * * *'
+     - cron: '1 1-23 * * *'
   watch:
     types: started
 jobs:
