--- a/.github/workflows/xiaole.yml
+++ b/.github/workflows/xiaole.yml
@@ -2,7 +2,7 @@ name: 小乐
 on:
   workflow_dispatch:
   schedule:
-     - cron: '1 1-23 * * *'
+     - cron: '1 11 * * *'
   watch:
     types: started
 jobs:
