--- a/.github/workflows/youth.yml
+++ b/.github/workflows/youth.yml
@@ -1,14 +1,14 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: 中青看点
+#多帐号YOUTH_HEADER 用#号隔开，其它的用&隔开
+name: youth(中青看点)
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/35 * * * *'
+     - cron: '0/15 * * * *'
   watch:
-    types: started
+    types: youth
 
 jobs:
   build:
@@ -20,9 +20,7 @@ jobs:
         YOUTH_REDBODY: ${{ secrets.YOUTH_REDBODY }}
         YOUTH_TIME: ${{ secrets.YOUTH_TIME }}
     steps:
-      - name: Checkout
-        run: |
-          git clone https://github.com/Sunert/Scripts.git ~/Scripts
+      - uses: actions/checkout@v1
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
@@ -30,13 +28,11 @@ jobs:
       - name: npm install
         if: env.YOUTH_HEADER
         run: |
-          cd ~/Scripts
           npm install
       - name: '运行 【中青看点】'
         if: env.YOUTH_HEADER
         run: |
-          cd ~/Scripts
-          node Task/youth.js
+          node youth.js
         env:
           YOUTH_NOTIFY_CONTROL: ${{ secrets.YOUTH_NOTIFY_CONTROL }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
